--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,7 @@
 @import 'v-progress-bar';
 @import 'super-wrap';
 @import 'phase-banner';
+@import 'web-chat';
 @import '../../components/postcodeLookup/assets/main';
 
 p.contact-us::first-line {
@@ -398,4 +399,10 @@ label.form-label[for="signer"] {
 
 .nowrap {
   white-space: nowrap;
+}
+
+.web-chat-link {
+  a {
+    @extend .govuk-link;
+  }
 }
