SSCS-8509: Defects in new Webchat integration

--- a/views/components/contact-us.html
+++ b/views/components/contact-us.html
@@ -9,9 +9,9 @@
                 <div id="antenna-web-chat" >
                     <div id="antenna-web-chat-link">
                         <p class="govuk-body govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.webchat.desc | safe }}</p>
-                        <a class="web-chat-link" href="#">{{ commonContent[htmlLang].contactUs.webchat.textChatWithAnAgent | safe }}</a>
-                        {% include "components/web-chat.html" %}
+                        <a id="antenna-web-chat-button" href="#">{{ commonContent[htmlLang].contactUs.webchat.textChatWithAnAgent | safe }}</a>
                     </div>
+                    {% include "components/web-chat.html" %}
                     <div id="antenna-web-chat-closed" style="display: none;">{{ commonContent[htmlLang].contactUs.webchat.textChatClosed | safe }}</div>
                     <div id="antenna-web-chat-busy" style="display: none;">{{ commonContent[htmlLang].contactUs.webchat.textAllAgentsBusy | safe }}</div>
                     <div id="antenna-web-chat-no-agents" style="display: none;">{{ commonContent[htmlLang].contactUs.webchat.textNoAgentsAvailable | safe }}</div>
