SSCS-8795 Update GTM

--- a/views/components/globals.html
+++ b/views/components/globals.html
@@ -12,22 +12,13 @@
 
 {% block head -%}
     <!-- Google Tag Manager -->
-    {% if environment === 'prod' %}
-        <!-- Live analytics -->
-        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-            'https://www.googletagmanager.com/gtm.js?id='+i+dl+ '&gtm_auth=UuZZs4BGR3tNzCze2MIbBw&gtm_preview=env-2&gtm_cookies_win=x';f.parentNode.insertBefore(j,f);
-          })(window,document,'script','dataLayer','GTM-T56C5T7');</script>
-    {% else %}
-        <!-- Dev analytics -->
-        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-            'https://www.googletagmanager.com/gtm.js?id='+i+dl+ '&gtm_auth=uYQEEAOU5-Kwl3yix5HG_A&gtm_preview=env-87&gtm_cookies_win=x';f.parentNode.insertBefore(j,f);
-          })(window,document,'script','dataLayer','GTM-T56C5T7');</script>
-    {% endif %}
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-T56C5T7');</script>
     <!-- End Google Tag Manager -->
+
     <link href="{{ asset_path }}vendors~main.css" media="screen" rel="stylesheet" />
     <link href="{{ asset_path }}main.css" media="screen" rel="stylesheet" />
     <input id="asset-path" type="hidden" data-path="{{ asset_path }}">
@@ -35,14 +26,9 @@
 
 {% block bodyStart %}
     <!-- Google Tag Manager (noscript) -->
-    {% if environment === 'prod' %}
-        <!-- Live analytics -->
-        <noscript><iframe title="Google Tag Management" src="https://www.googletagmanager.com/ns.html?id=GTM-T56C5T7&gtm_auth=UuZZs4BGR3tNzCze2MIbBw&gtm_preview=env-2&gtm_cookies_win=x" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    {% else %}
-        <!-- Dev analytics -->
-        <noscript><iframe title="Google Tag Management" src="https://www.googletagmanager.com/ns.html?id=GTM-T56C5T7&gtm_auth=uYQEEAOU5-Kwl3yix5HG_A&gtm_preview=env-87&gtm_cookies_win=x" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    {% endif %}
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T56C5T7" title="GTM" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <noscript> <img alt="no javascript" src="/assets/images/noJS.png" width="1" height="1" /></noscript>
 {% endblock %}
 
