Point Demo SYA to training Antenna Webchat

--- a/views/components/web-chat.html
+++ b/views/components/web-chat.html
@@ -5,7 +5,7 @@
 <web-chat class="hidden"
           chat-title="HMCTS Web Chat"
           chat-icon-url="https://webchat-client.training.ctsc.hmcts.net/chat-client/1/assets/icon.png"
-          url="webchat.ctsc.hmcts.net"
+          url="webchat.training.ctsc.hmcts.net"
           secure-connections="true"
           api-version="1.0"
           metrics-polling-interval="5"
