Point Demo SYA to training Antenna Webchat

--- a/views/components/web-chat.html
+++ b/views/components/web-chat.html
@@ -15,6 +15,6 @@
           lease-time="24"
           priority="5"
           language="English"
-          service="SSCS"
+          service="Testing"
           page-name="Appeal a benefit decision">
 </web-chat>
