update cookie banner

--- a/views/components/globals.html
+++ b/views/components/globals.html
@@ -65,6 +65,9 @@
     <script src="{{ asset_path }}vendors~main.js" type="text/javascript"></script>
     <script src="{{ asset_path }}main.js" type="text/javascript"></script>
     <script src="{{ asset_path }}hmcts-webchat.js"></script>
+    <script src="components/cookie-manager/cookies-manager.js"></script>
+    <script src="./node_modules/cmc-cookies-manager/shared-component/components/cookie-manager/cookies-manager.js"></script>
+
     {% if webChatEnabled and htmlLang == "en" %}
         <script>
             /*
