--- a/views/layouts/check_your_answers.html
+++ b/views/layouts/check_your_answers.html
@@ -31,6 +31,7 @@
 {% block breadcrumbs %}
   {{ phaseBanner(commonContent[htmlLang], feedbackLink + urlPath) }}
   <a class="govuk-back-link" href="#">{{ commonContent[htmlLang].back | safe }}</a>
+  <div id="spinner"></div>
 {% endblock %}
 
 {% block two_thirds %}
