--- a/views/layouts/check_your_answers.html
+++ b/views/layouts/check_your_answers.html
@@ -31,10 +31,10 @@
 {% block breadcrumbs %}
   {{ phaseBanner(commonContent[htmlLang], feedbackLink + urlPath) }}
   <a class="govuk-back-link" href="#">{{ commonContent[htmlLang].back | safe }}</a>
-  <div id="spinner"></div>
 {% endblock %}
 
 {% block two_thirds %}
+<div id="loading" class="loading">
   {{ errorSummary(fields) }}
   {{ header(pageContent.title | default(defaultContent.title)) }}
 
@@ -67,7 +67,8 @@
     {% block statement_of_truth_content %}
       {{ header('Now send your application', size='m') }}
       <p class="govuk-body">{{ pageContent.statementOfTruth | default(defaultContent.statementOfTruth) | safe }}</p>
-    {% endblock %}
+</div>
+{% endblock %}
     <form action="{{ postUrl | default(path if path else url) }}"
           method="post"
           class="form"
