added new cookie banner

--- a/views/layouts/two_thirds.html
+++ b/views/layouts/two_thirds.html
@@ -4,6 +4,7 @@
 {% set bodyClasses = 'app-body-class' %}
 {% set mainClasses = 'app-main-class' %}
 {% set assetPath = '/assets' %}
+{% set serviceName = 'submit your appeal' %}
 {% set htmlLang = i18n.currentLanguage if i18n.currentLanguage else "en" %}
 
 {% block pageTitle %}{{ title | default(defaultContent.title) | safe }}{% endblock %}
@@ -13,6 +14,10 @@
 {% endblock %}
 
 {% block header %}
+<div>
+  {% include "../../app/main/common/components/imported/cookie-manager/cookie-banner.njk" %}
+</div>
+
   {% include "components/cookie-banner.html" %}
   {% include "components/navigation.html" %}
 {% endblock %}
@@ -32,6 +37,7 @@
       </div>
     </div>
   {% endblock %}
+
 
   {% if allowContactUs %}
     {% include "components/contact-us.html" %}
