--- a/views/components/globals.html
+++ b/views/components/globals.html
@@ -67,9 +67,9 @@
     <script src="{{ asset_path }}hmcts-webchat.js"></script>
 
 
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js" integrity="sha384-r0tJvB87edk25TJle8mfwmdYBwaGtkX3r4CYHXS+2yZ7VPdI8xd2rHl6KTQ6oij4" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js" integrity="sha384-j8NDh7xgS5yD79FJaC4LVz+bUq+K2scg+IHBDYytSaAZEz+JXQocy0ByM2KqttBH" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" integrity="sha384-VI5+XuguQ/l3kUhh4knz7Hxptx47wpQbVRDnp8v7Vvuhzwn1PEYb/uvtH6KLxv6d" crossorigin="anonymous"></script>
     <script>
       $(document).ready(function(){
         checkCookie()
