Sscs 9073 sya retry fix

--- a/views/layouts/check_your_answers.html
+++ b/views/layouts/check_your_answers.html
@@ -30,6 +30,7 @@
 
 {% block breadcrumbs %}
   {{ phaseBanner(commonContent[htmlLang], feedbackLink + urlPath) }}
+  <link href="https://cdn.jsdelivr.net/npm/spin.js@latest/spin.css" rel="stylesheet">
   <a class="govuk-back-link" href="#">{{ commonContent[htmlLang].back | safe }}</a>
   <div id="example" class="demo"></div>
 {% endblock %}
