SSCS-9364:SYA - add [User=Chat] attribute to antenna web chat client

--- a/views/components/web-chat.html
+++ b/views/components/web-chat.html
@@ -1,10 +1,10 @@
-<link  href="https://webchat-client.ctsc.hmcts.net/chat-client/1/styles.css" rel="stylesheet"/>
-<script src="https://webchat-client.ctsc.hmcts.net/chat-client/1/app-es2015.js" type="module"></script>
-<script src="https://webchat-client.ctsc.hmcts.net/chat-client/1/app-es5.js" nomodule defer></script>
+<link  href="https://webchat-client.training.ctsc.hmcts.net/chat-client/1/styles.css" rel="stylesheet"/>
+<script src="https://webchat-client.training.ctsc.hmcts.net/chat-client/1/app-es2015.js" type="module"></script>
+<script src="https://webchat-client.training.ctsc.hmcts.net/chat-client/1/app-es5.js" nomodule defer></script>
 
 <web-chat class="hidden"
           chat-title="HMCTS Web Chat"
-          chat-icon-url="https://webchat-client.ctsc.hmcts.net/chat-client/1/assets/icon.png"
+          chat-icon-url="https://webchat-client.training.ctsc.hmcts.net/chat-client/1/assets/icon.png"
           url="webchat.ctsc.hmcts.net"
           secure-connections="true"
           api-version="1.0"
@@ -16,5 +16,6 @@
           priority="5"
           language="English"
           service="SSCS"
+          User="Chat"
           page-name="Appeal a benefit decision">
 </web-chat>
