SSCS-9364:SYA - add [User=Chat] attribute to antenna web chat client

--- a/views/components/web-chat.html
+++ b/views/components/web-chat.html
@@ -15,7 +15,7 @@
           lease-time="24"
           priority="5"
           language="English"
-          service="SSCS"
+          service="Testing"
           User="Chat"
           page-name="Appeal a benefit decision">
 </web-chat>
