sscs 9368 added gap between buttons

--- a/views/components/archive-warning.html
+++ b/views/components/archive-warning.html
@@ -5,7 +5,7 @@
         <h2 class="icon-important red-inverse">{{ content.dialog.title | safe }}</h2>
         <p class="govuk-body">{{ content.dialog.warnMessage | safe }}</p>
         <p>
-            <button class="govuk-button extend" id="extend" href="#" rel="modal:close">{{ content.dialog.buttons.save | safe }}</button>
+            <button class="govuk-button extend archive-warning-button" id="extend" href="#" rel="modal:close">{{ content.dialog.buttons.save | safe }}</button>
             <button class="govuk-button govuk-button--secondary abort" id="archive" href="#">{{ content.dialog.buttons.archive | safe }}</button>
         </p>
     </div>
