--- a/views/components/web-chat.html
+++ b/views/components/web-chat.html
@@ -1,11 +1,11 @@
-<link  href="https://webchat-client.ctsc.hmcts.net/chat-client/1/styles.css" rel="stylesheet"/>
-<script src="https://webchat-client.ctsc.hmcts.net/chat-client/1/app-es2015.js" type="module"></script>
-<script src="https://webchat-client.ctsc.hmcts.net/chat-client/1/app-es5.js" nomodule defer></script>
+<link  href="https://{{ webChatClientUrl }}/chat-client/1/styles.css" rel="stylesheet"/>
+<script src="https://{{ webChatClientUrl }}/chat-client/1/app-es2015.js" type="module"></script>
+<script src="https://{{ webChatClientUrl }}/chat-client/1/app-es5.js" nomodule defer></script>
 
 <web-chat class="hidden"
           chat-title="HMCTS Web Chat"
-          chat-icon-url="https://webchat-client.ctsc.hmcts.net/chat-client/1/assets/icon.png"
-          url="webchat.ctsc.hmcts.net"
+          chat-icon-url="https://{{ webChatClientUrl }}/chat-client/1/assets/icon.png"
+          url={{ webChatUrl }}
           secure-connections="true"
           api-version="1.0"
           metrics-polling-interval="5"
