SSCSCI-18: restore govuk-button ext for uploadEv

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -358,6 +358,11 @@ label.form-label[for="signer"] {
   display: none;
   visibility: hidden; }
 
+[for=uploadEv]{
+  @extend .govuk-button;
+  @extend .govuk-button--secondary;
+}
+
 .form-buttons-group {
   line-height: 2.375rem;
 
