SSCSCI-18: restore button role

--- a/views/layouts/add_another.html
+++ b/views/layouts/add_another.html
@@ -46,7 +46,7 @@
       {% endcall %}
 
       {% call formSection() %}
-        <a href="{{ addAnotherUrl }}" class="add-another-add-link govuk-button govuk-button--secondary">
+        <a href="{{ addAnotherUrl }}" class="add-another-add-link govuk-button govuk-button--secondary" role="button">
            {{ defaultContent.addAnotherLink | safe }}
         </a>
       {% endcall %}
