--- a/views/layouts/two_thirds.html
+++ b/views/layouts/two_thirds.html
@@ -32,11 +32,19 @@
 
 {% block content -%}
   <script>
+    
+    {% if featureToggles.webchatOpen8to5() == "true" %}
+      document.webchatOpeningFlag = true;
+    {% else %}
+      document.webchatOpeningFlag = false;
+    {% endif %}
+    
     {% if welshWebchatEnabled %}
       document.welshWebchatFlag = true;
     {% else %}
       document.welshWebchatFlag = false;
     {% endif %}
+    
   </script>
   {% block full_width %}
     <div class="govuk-grid-row">
