--- a/views/components/web-chat.html
+++ b/views/components/web-chat.html
@@ -6,7 +6,7 @@
           chat-title="{{ commonContent[htmlLang].contactUs.webchat.chatTitle }}"
           chat-icon-url="https://{{ webChatClientUrl }}/chat-client/{{ commonContent[htmlLang].contactUs.webchat.jsFile }}/assets/icon.png"
           locale-url="/assets/locale/{{ [htmlLang] }}-gb"
-          url="{{ url }}"
+          url="{{ webChatUrl }}"
           secure-connections="true"
           api-version="1.0"
           metrics-polling-interval="5"
