--- a/views/components/web-chat-scotland.njk
+++ b/views/components/web-chat-scotland.njk
@@ -3,12 +3,8 @@
 
 <div id="__8x8-chat-button-container-script_1553624711656480310cfd53.70557078"></div>
 
-
-
 <!-- This script will not interfere with the button layout, you just need to include it in the same page. It must also be within the <body> section of the page, preferably just before the ending tag. -->
-
 <script type="text/javascript">
-
     window.__8x8Chat =
     {uuid: "script_1553624711656480310cfd53.70557078",
     tenant: "aG1jdHN4MTAx",
@@ -18,10 +14,9 @@
     path: "/.",
     buttonContainerId: "__8x8-chat-button-container-script_1553624711656480310cfd53.70557078",
     align: "right"
-    };
-
-    (function()
-    {var se = document.createElement("script");
+  };
+  (function() {
+    var se = document.createElement("script");
     se.type = "text/javascript";
     se.async = true;
     se.src = window.__8x8Chat.domain + window.__8x8Chat.path + "/CHAT/common/js/chat.js";
@@ -32,5 +27,3 @@
 
 </script>
 {% endmacro %}
-
-
