--- a/views/components/web-chat-scotland.njk
+++ b/views/components/web-chat-scotland.njk
@@ -10,7 +10,7 @@
     tenant: "aG1jdHN4MTAx",
     channel: "Scotland_Tribunal_SSCS_Webchat",
     channelUuid: "aUEWe4EVSOuCIvsuANo64Q",
-    domain: "[https://vcc-eu4.8x8.com|https://vcc-eu4.8x8.com/]",
+    domain: "https://vcc-eu4.8x8.com",
     path: "/.",
     buttonContainerId: "__8x8-chat-button-container-script_1553624711656480310cfd53.70557078",
     align: "right"
@@ -21,9 +21,7 @@
     se.async = true;
     se.src = window.__8x8Chat.domain + window.__8x8Chat.path + "/CHAT/common/js/chat.js";
     var os = document.getElementsByTagName("script")[0];
-    os.parentNode.insertBefore(se, os)
-    ;}
-)();
-
+    os.parentNode.insertBefore(se, os);
+  })();
 </script>
 {% endmacro %}
